fix: vault item nbt data preserved